// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FolderDropDown component renders correctly with selected folder 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#232323",
      "borderBottomLeftRadius": 15,
      "borderBottomRightRadius": 15,
      "borderColor": "#BADE5B",
      "borderStyle": "solid",
      "borderTopLeftRadius": 15,
      "borderTopRightRadius": 15,
      "borderWidth": 1,
      "display": "flex",
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "center",
      "marginRight": 12,
      "opacity": 1,
      "paddingBottom": 10,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 10,
    }
  }
>
  FolderIcon
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "#fff",
        "fontFamily": "Inter",
        "fontSize": 16,
        "maxWidth": 100,
      }
    }
  >
    Test Folder
  </Text>
  ArrowDownIcon
</View>
`;

exports[`FolderDropDown component renders correctly without selected folder 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#232323",
      "borderBottomLeftRadius": 15,
      "borderBottomRightRadius": 15,
      "borderColor": "#BADE5B",
      "borderStyle": "solid",
      "borderTopLeftRadius": 15,
      "borderTopRightRadius": 15,
      "borderWidth": 1,
      "display": "flex",
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "center",
      "marginRight": 12,
      "opacity": 1,
      "paddingBottom": 10,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 10,
    }
  }
>
  FolderIcon
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "#fff",
        "fontFamily": "Inter",
        "fontSize": 16,
        "maxWidth": 100,
      }
    }
  >
    No Folder
  </Text>
  ArrowDownIcon
</View>
`;
